--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.30",
     "@types/mongoose": "^5.11.97",
+    "@types/pg": "^8.10.1",
+    "@types/pg-pool": "^2.0.3",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -41,6 +45,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.0"
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "mongoose": "^7.2.0",
+    "pg": "^8.11.0",
+    "pg-pool": "^3.6.0"
   }
 }
