feat: implement redis

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-MONGO_URL=mongodb+srv://<username>:<password>@<host>/?retryWrites=true&w=majority
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=tsexpressfw
+DB_USER=postgres
+DB_PASSWORD=postgres
+
+SECRET_KEY=Vl9cqf5bybyte64guC8kminFq9wnMBzI
+JWT_SECRET=FXqMGGXDOsE92rEz8tQBMZOfd3VZf2Ci
+REDIS_URL=redis://localhost:6379/0
