--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/pg": "^8.10.1",
     "@types/pg-pool": "^2.0.3",
+    "@types/redis": "^4.0.11",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -49,6 +50,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.2.0",
     "pg": "^8.11.0",
-    "pg-pool": "^3.6.0"
+    "pg-pool": "^3.6.0",
+    "redis": "^4.6.7"
   }
 }
